ignore file updated

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 db.sqlite3
+package-lock.json
 # Runtime data
 pids
 *.pid
@@ -55,13 +56,6 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-
-
-
-#Virtualenv 
-app/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -75,7 +69,6 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
