--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,16 +1,16 @@
 {
   "name": "reduxboilerplate",
   "version": "1.0.0",
-  "description": "A boilerplate code for react redux project",
+  "description": "A Blog Made in Django and ReactJs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server",
-    "postinstall": "webpack -p"
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vinitraj10/Webpack-Bolierplate.git"
+    "url": "git+https://github.com/vinitraj10/Django-React-Blog"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "axios": "^0.16.2",
     "babel-preset-stage-1": "^6.24.1",
     "moment": "^2.18.1",
+    "npm": "^6.3.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
@@ -36,11 +37,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "chai": "4.1.1",
-    "chai-jquery": "^2.0.0",
-    "jsdom": "^11.1.0",
-    "mocha": "^3.5.0",
-    "react-addons-test-utils": "^15.6.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "redux-logger": "^3.0.6",
     "webpack": "^3.5.3",
     "webpack-dev-server": "^2.7.1"
