--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,10 @@ jspm_packages/
 # Typescript v1 declaration files
 typings/
 
+# python enviornment
+venv/
+env/
+
 # Optional npm cache directory
 .npm
 
